fix: adjust responsive screen sizes on mobile

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -17,7 +17,7 @@ html {
 }
 body {
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   margin: 0;
   overflow: hidden;
   font-family: #{$font-family};
